--- a/zoom/zoom.css
+++ b/zoom/zoom.css
@@ -1,3 +1,18 @@
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Ndalon rrëshqitjen (scrolling) e panevojshme */
+    position: fixed; /* E mban saitin "beton" në ekran */
+}
+
+.main-wrapper {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+}
 /* --- Variablat Kryesore --- */
 :root {
     --bg-dark: #121212;
